--- a/yeuthietkeweb.web/yeuthietkeweb.web/Web.config
+++ b/yeuthietkeweb.web/yeuthietkeweb.web/Web.config
@@ -13,10 +13,10 @@
     </sectionGroup>
   </configSections>
   <connectionStrings>
-    <add name="Model.Properties.Settings.database_mauConnectionString"
-             connectionString="Data Source=(local);Initial Catalog=dataweb_mau;Persist Security Info=True;User ID=sa;Password=123"
+    <add name="Model.Properties.Settings.dbShop_ConnectionString"
+             connectionString="Data Source=(local);Initial Catalog=dbShop;Persist Security Info=True;User ID=sa;Password=123"
             providerName="System.Data.SqlClient" />
-    <!--<add name="Model.Properties.Settings.database_mauConnectionString"
+    <!--<add name="Model.Properties.Settings.dbShop_ConnectionString"
              connectionString="Data Source=(local);Initial Catalog=thongtinthoidai_vn;Persist Security Info=True;User ID=thongtinthoidai;Password=DGkAT59Khw"
             providerName="System.Data.SqlClient" />-->
   </connectionStrings>
